# tau

./: .cproject  .gitignore  .project  CMakeLists.txt  Notes.rtf  OdeRobot.cpp  OdeRobot.hpp  README.md  TauRobot.cpp  doxygen.config  robot.cpp  robot.hpp  tau.cpp  tau.hpp  tau.pro
cmake/Modules/: FindEigen3.cmake  FindGSL.cmake  FindODE.cmake
doc/: CMakeLists.txt  doxygen.config.in
src/: CMakeLists.txt  OdeRobot.cpp  TauRobot.cpp  TauRobot.hpp  TauSystemIncludes.hpp  tau.cpp  tau.hpp
src/test/: simpleTest.cpp  testOdeRobot.hpp  testTau.cpp
tau.xcodeproj/: default.pbxuser  project.pbxproj  vector.mode2v3
